fix overflow skeleton mobile screen

--- a/src/components/ProductSkeleton/productSkeleton.scss
+++ b/src/components/ProductSkeleton/productSkeleton.scss
@@ -5,6 +5,9 @@
     width: 100% !important;
     height: 100% !important;
   }
+  .ant-skeleton {
+    overflow: hidden;
+  }
 }
 .product-card__row {
   .product-card__price {
